--- a/agents/langgraph-arxiv-research/pyproject.toml
+++ b/agents/langgraph-arxiv-research/pyproject.toml
@@ -18,6 +18,8 @@ langgraph = ">0.2,<0.3"
 statsmodels = "^0.14.4"
 numpy = "<2"
 pytest = "^8.3.3"
+langchain-community = "^0.3.17"
+duckduckgo-search = "^7.3.2"
 
 
 [build-system]
