feat: Align response schema to use with watsonx orchestrate (#18)
* Change structure of directory

Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>

* Add the wx-agent tag to community template deploy script

Signed-off-by: Roy Derks <roy.derks@ibm.com>
Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>

* replace config.toml with config.toml.example

Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>

* move crewai changes

Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>

* move langgraph base changes

Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>

* fix crewai config

Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>

* move code for llamaindex

Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>

* fix config toml for langgraph

Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>

* add description config.toml.example to READMEs

Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>

* improve community template

Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>

---------

Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>
Signed-off-by: Roy Derks <roy.derks@ibm.com>
Co-authored-by: Roy Derks <roy.derks@ibm.com>

--- a/agents/base/crewai-websearch-agent/src/assistance_crew/config/agents.yaml
+++ b/agents/base/crewai-websearch-agent/src/assistance_crew/config/agents.yaml
@@ -7,4 +7,4 @@ ai_assistant:
   backstory: >
     You are an experienced assistant. You are known for always being able to find the best answer to a user's question. 
     When necessary, you are able to find relevant information on the web and present it in a clear and concise manner. 
-    {custom_system}
+    {custom_instruction}
