--- a/agents/base/llamaindex-websearch-agent/config.toml.example
+++ b/agents/base/llamaindex-websearch-agent/config.toml.example
@@ -1,4 +1,3 @@
-
 [deployment]
   watsonx_apikey = "PLACEHOLDER FOR YOUR APIKEY"
   watsonx_url = ""  # should follow the format: `https://{REGION}.ml.cloud.ibm.com`
@@ -8,4 +7,5 @@
 # during creation of deployment additional parameters can be provided inside `CUSTOM` object for further referencing
 # please refer to the API docs: https://cloud.ibm.com/apidocs/machine-learning-cp#deployments-create
   model_id = "mistralai/mistral-large"  # underlying model of WatsonxChat
-  thread_id = "thread-1" # More info here: https://langchain-ai.github.io/langgraph/how-tos/persistence/
+  space_id = "PLACEHOLDER FOR YOUR SPACE ID"
+  url = ""  # should follow the format: `https://{REGION}.ml.cloud.ibm.com`
