--- a/agents/community/langgraph-arxiv-research/pyproject.toml
+++ b/agents/community/langgraph-arxiv-research/pyproject.toml
@@ -20,6 +20,7 @@ numpy = "<2"
 pytest = "^8.3.3"
 langchain-community = "^0.3.17"
 duckduckgo-search = "^7.3.2"
+markdownify = "^1.1.0"
 
 
 [build-system]
