fix: replace vector index project id with space id (#32)
Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>

--- a/agents/community/langgraph-agentic-rag/config.toml.example
+++ b/agents/community/langgraph-agentic-rag/config.toml.example
@@ -33,7 +33,7 @@
 
   # RAGQuery Tool configuration
   # Required:
-  tool_config_projectId = ""
+  tool_config_spaceId = ""
   tool_config_vectorIndexId = ""
 
   # Optional:
