fix: rename env variables
Signed-off-by: Filip Żmijewski <filip.zmijewski@ibm.com>

--- a/apps/nextjs-carbon-react-ui/template.env
+++ b/apps/nextjs-carbon-react-ui/template.env
@@ -1,3 +1,3 @@
-SPACE_ID=VALUE
-API_KEY=VALUE
-BASE_DEPLOYMENT_URL=ABSOLUTE_URL_FOR_THE_AI_SERVICE_DEPLOYMENT
+WATSONX_SPACE_ID=VALUE
+WATSONX_API_KEY=VALUE
+WATSONX_BASE_DEPLOYMENT_URL=ABSOLUTE_URL_FOR_THE_AI_SERVICE_DEPLOYMENT
