fix: rename react app, add subfolder
Signed-off-by: Filip Żmijewski <filip.zmijewski@ibm.com>

--- a/apps/base/nextjs-chat-with-ai-service/package.json
+++ b/apps/base/nextjs-chat-with-ai-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-carbon-react-ui",
+  "name": "nextjs-chat-with-ai-service",
   "version": "0.1.0",
   "private": true,
   "repository": "git@github.ibm.com:dap/demo-gen-ai-flow-app.git",
