--- a/agents/community/langgraph-agentic-rag/config.toml.example
+++ b/agents/community/langgraph-agentic-rag/config.toml.example
@@ -23,6 +23,11 @@
   # variable, that is populated with last created deployment_id every time when command `watsonx-ai service new` finish successfully
   deployment_id = ""
 
+  # The following parameters, along with the ones defined above, are supported by IBM watsonx.ai Software.
+  watsonx_password = ""
+  watsonx_username = ""
+  watsonx_instance_id = ""
+
 [deployment.online.parameters]
   # during creation of deployment additional parameters can be provided inside `ONLINE` object for further referencing
   # please refer to the API docs: https://cloud.ibm.com/apidocs/machine-learning-cp#deployments-create
