--- a/.github/workflows/deploy-agent.yaml
+++ b/.github/workflows/deploy-agent.yaml
@@ -31,7 +31,8 @@ jobs:
       run: watsonx-ai service new
 
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest\
+    needs: deploy-dev
     steps:
     - run: echo "🧪 Running tests..."
     - name: Checkout latest update
@@ -47,6 +48,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: [deploy-dev, test]
     steps:
     - run: echo "🚀 Deploying to prod..."
     - name: Checkout latest update
