--- a/.github/workflows/deploy-agent.yaml
+++ b/.github/workflows/deploy-agent.yaml
@@ -30,7 +30,7 @@ jobs:
       run: cd "${AGENT_WORKDIR}" && watsonx-ai service new
 
   test:
-    runs-on: ubuntu-latest\
+    runs-on: ubuntu-latest
     needs: deploy-dev
     steps:
     - run: echo "🧪 Running tests..."
