--- a/.github/workflows/deploy-agent.yaml
+++ b/.github/workflows/deploy-agent.yaml
@@ -11,6 +11,8 @@ env:
 jobs:
   deploy-dev:
     runs-on: ubuntu-latest
+    outputs:
+      deployment_id: ${{ steps.deploy.outputs.deployment_id }}
     steps:
     - run: echo "🚀 Deploying to dev..."
     - name: Checkout latest update
@@ -27,7 +29,8 @@ jobs:
       run: python scripts/setup-agent-deployment.py
 
     - name: Deploy agent to dev space
-      run: cd "${AGENT_WORKDIR}" && watsonx-ai service new
+      id: deploy
+      run: cd "${AGENT_WORKDIR}" && watsonx-ai service new | grep -o "deployment_id='[^']*'" >> "$GITHUB_OUTPUT"
 
   test:
     runs-on: ubuntu-latest
@@ -40,6 +43,9 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
+    - env:
+        DEPLOYMENT_ID: ${{ needs.deploy-dev.outputs.deployment_id }}
+      run: echo "${DEPLOYMENT_ID}"
 
     - name: Test agent
       run: cd "${AGENT_WORKDIR}" && pytest -r 'fEsxX' tests/
