feat: add setup-agent-test.py script for setting up testing env

--- a/.github/workflows/deploy-agent.yaml
+++ b/.github/workflows/deploy-agent.yaml
@@ -14,20 +14,19 @@ jobs:
     outputs:
       deployment_id: ${{ steps.deploy.outputs.deployment_id }}
     steps:
-    - run: echo "🚀 Deploying to dev..."
     - name: Checkout latest update
       uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
+
     - name: Set up agent
       env:
         WATSONX_API_KEY: ${{ secrets.WATSONX_API_KEY }}
         WATSONX_URL: ${{ secrets.WATSONX_URL }}
         WATSONX_SPACE_ID: ${{ secrets.WATSONX_SPACE_ID_DEV }}
       run: python scripts/setup-agent-deployment.py
-
     - name: Deploy agent to dev space
       id: deploy
       run: cd "${AGENT_WORKDIR}" && watsonx-ai service new | grep -o "deployment_id='[^']*'" >> "$GITHUB_OUTPUT"
@@ -36,37 +35,37 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy-dev
     steps:
-    - run: echo "🧪 Running tests..."
     - name: Checkout latest update
       uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
+
     - env:
         DEPLOYMENT_ID: ${{ needs.deploy-dev.outputs.deployment_id }}
       run: echo "${DEPLOYMENT_ID}"
-
-    - name: Test agent
+    - name: Set up quality test
+      run: python scripts/setup-agent-test.py
+    - name: Test the agent
       run: cd "${AGENT_WORKDIR}" && pytest -r 'fEsxX' tests/
 
-  deploy:
+  deploy-prod:
     runs-on: ubuntu-latest
     needs: [deploy-dev, test]
     steps:
-    - run: echo "🚀 Deploying to prod..."
     - name: Checkout latest update
       uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
+
     - name: Set up agent
       env:
         WATSONX_API_KEY: ${{ secrets.WATSONX_API_KEY }}
         WATSONX_URL: ${{ secrets.WATSONX_URL }}
         WATSONX_SPACE_ID: ${{ secrets.WATSONX_SPACE_ID_PROD }}
       run: python scripts/setup-agent-deployment.py
-
     - name: Deploy agent to dev space
       run: cd "${AGENT_WORKDIR}" && watsonx-ai service new
