--- a/agents/community/langgraph-react-agent-with-database/pyproject.toml
+++ b/agents/community/langgraph-react-agent-with-database/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "langgraph_react_agent"
+name = "langgraph_react_agent_database"
 version = "0.1.0"
 description = "A template for a LangGraph LLM app deployable on IBM Cloud as an ai_service. This particular example focues on storing messages history in a database"
 authors = ["Your Name <you@example.com>"]
 license = "MIT"
 readme = "README.md"
 packages = [
-    { include = "langgraph_react_agent", from = "src" }
+    { include = "langgraph_react_agent_database", from = "src" }
 ]
 
 
