fix: fix dependency for templates (#53)
* fix dependency for templates

Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>

* Update autogen_watsonx_client version

Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>

* change order autogen

Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>

---------

Signed-off-by: Mateusz Switala <mateusz.switala@ibm.com>
Co-authored-by: Wojciech-Rebisz <Wojciech.Rebisz@ibm.com>

--- a/agents/base/autogen-agent/pyproject.toml
+++ b/agents/base/autogen-agent/pyproject.toml
@@ -17,6 +17,7 @@ autogen-agentchat = "^0.4.6"
 autogen-core = "^0.4.6"
 autogen-ext = "^0.4.6"
 autogen_watsonx_client = "^0.0.8"
+ibm-watsonx-ai = { version = ">=1.3.5", python = ">=3.11,<3.13" }
 nest_asyncio = "^1.6.0"
 
 
