almost final version
Signed-off-by: Kajetan Ozog <Kajetan.Ozog@ibm.com>

--- a/agents/community/langgraph_react_with_database_memory/config.toml.example
+++ b/agents/community/langgraph_react_with_database_memory/config.toml.example
@@ -33,7 +33,7 @@
 # please refer to the API docs: https://cloud.ibm.com/apidocs/machine-learning-cp#deployments-create
   model_id = "mistralai/mistral-large"  # underlying model of WatsonxChat
   url = ""  # should follow the format: `https://{REGION}.ml.cloud.ibm.com`
-  conntection_id = "" # Postgres database id
+  conntection_id = "" # Postgres database ID
 
 [deployment.software_specification]
   # Name for derived software specification. If not provided, default one is used that will be build based on the package name: "{pkg_name}-sw-spec"
