fix: run local invoke via poetry run command in deploy-agent.yaml workflow

--- a/.github/workflows/deploy-agent.yaml
+++ b/.github/workflows/deploy-agent.yaml
@@ -38,7 +38,7 @@ jobs:
     - name: Set up template invoke
       run: python scripts/setup-template-test.py
     - name: Invoke agent template
-      run: cd "${AGENT_WORKDIR}" && watsonx-ai template invoke "Hello"
+      run: cd "${AGENT_WORKDIR}" && poetry run watsonx-ai template invoke "Hello"
 
   deploy-dev:
     runs-on: ubuntu-latest
