--- a/agents/community/langgraph-react-with-database-memory/pyproject.toml
+++ b/agents/community/langgraph-react-with-database-memory/pyproject.toml
@@ -11,13 +11,15 @@ packages = [
 
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.13"
+python = ">=3.11,<3.13"
 langchain-ibm = "^0.3.7"
+langgraph = ">0.2,<0.3"
+langgraph-checkpoint-postgres = "^2.0.21"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.3"
 python-dotenv = "^1.0.1"
 ibm-watsonx-ai = { version = ">=1.3.5", python = ">=3.11,<3.13" }
-langgraph = ">0.2,<0.3"
-pytest = "^8.3.3"
-langgraph-checkpoint-postgres = "^2.0.21"
 
 [build-system]
 requires = ["poetry-core"]
