fix: add config creation in test job

--- a/.github/workflows/deploy-agent.yaml
+++ b/.github/workflows/deploy-agent.yaml
@@ -49,12 +49,23 @@ jobs:
       - name: Install ibm-watsonx-ai CLI
         run: poetry run pip install ibm-watsonx-ai-cli
 
+      - name: Set up template config
+        working-directory: .
+        env:
+          WATSONX_API_KEY: ${{ secrets.WATSONX_API_KEY }}
+          WATSONX_URL: ${{ secrets.WATSONX_URL }}
+          WATSONX_SPACE_ID: ${{ secrets.WATSONX_SPACE_ID }}
+        run: poetry run python scripts/setup-config.py
+
       - name: Invoke agent template locally
         run: poetry run watsonx-ai template invoke "Hello, how can you help me?"
 
   deploy:
     runs-on: ubuntu-latest
     needs: [test]
+    defaults:
+      run:
+        working-directory: ${{ env.AGENT_WORKDIR }}
     env:
       POETRY_VENV_DIR: .venv
     steps:
@@ -81,15 +92,16 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
+      - name: Install ibm-watsonx-ai CLI
+        run: poetry run pip install ibm-watsonx-ai-cli
+
       - name: Set up deployment config
+        working-directory: .
         env:
           WATSONX_API_KEY: ${{ secrets.WATSONX_API_KEY }}
           WATSONX_URL: ${{ secrets.WATSONX_URL }}
           WATSONX_SPACE_ID: ${{ secrets.WATSONX_SPACE_ID }}
-        run: poetry run python scripts/setup-agent-deployment.py
-
-      - name: Install ibm-watsonx-ai CLI
-        run: poetry run pip install ibm-watsonx-ai-cli
+        run: poetry run python scripts/setup-config.py
 
       - name: Deploy agent to deployment space
         working-directory: ${{ env.AGENT_WORKDIR }}
