--- a/agents/base/langgraph-react-agent/pyproject.toml
+++ b/agents/base/langgraph-react-agent/pyproject.toml
@@ -24,6 +24,10 @@ unitxt = "^1.24.0"
 nltk = "^3.9.1"
 rouge-score = "^0.1.2"
 
+
+[tool.poetry.group.dev.dependencies]
+ibm-watsonx-ai-cli = "^0.1.8"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
