fix deploy job in gh action

--- a/.github/workflows/deploy-agent.yaml
+++ b/.github/workflows/deploy-agent.yaml
@@ -88,6 +88,9 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
+      - name: Install ibm-watsonx-ai CLI
+        run: poetry run pip install ibm-watsonx-ai-cli
+
       - name: Set up deployment config
         env:
           WATSONX_API_KEY: ${{ secrets.WATSONX_API_KEY }}
