--- a/.github/workflows/deploy-agent.yaml
+++ b/.github/workflows/deploy-agent.yaml
@@ -88,8 +88,8 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Install ibm-watsonx-ai CLI
-        run: poetry run pip install ibm-watsonx-ai-cli
+      - name: Install template with Poetry
+        run: poetry install --with dev,eval
 
       - name: Set up deployment config
         env:
