add clean up step

--- a/.github/workflows/deploy-agent.yaml
+++ b/.github/workflows/deploy-agent.yaml
@@ -106,3 +106,6 @@ jobs:
 
       - name: Quality validation
         run: poetry run python scripts/quality_check.py
+
+      - name: Remove deployment and associated asset
+        run: y | poetry run watsonx-ai service delete $(python -c "from utils import load_config; print(load_config('deployment')['deployment_id'])")
