--- a/.github/workflows/deploy-agent.yaml
+++ b/.github/workflows/deploy-agent.yaml
@@ -2,7 +2,7 @@ name: Test and deploy the agent
 
 on:
   push:
-    branches: [dev_add_quality_tests]
+    branches: [main]
 
 env:
   PYTHON_VERSION: ${{ vars.PYTHON_VERSION }}
