--- a/agents/base/beeai-framework-workflow/pyproject.toml
+++ b/agents/base/beeai-framework-workflow/pyproject.toml
@@ -11,18 +11,19 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "<3.13,>=3.11"
-beeai-framework = { version = "^0.1.19", extras = ["duckduckgo"] }
+beeai-framework = {extras = ["duckduckgo"], version = "^0.1.27"}
+pydantic = "^2.11.7"
 
 [tool.poetry.group.dev]
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-python-dotenv = "^1.0.1"
 ibm-watsonx-ai = { version = ">=1.1.22", python = ">=3.11,<3.13" }
-pytest = "^8.3.3"
-pytest-asyncio = "^0.25.3"
 nest-asyncio = "^1.6.0"
 numpy = "<2.0.0,>=1.26.4"
+pytest = "^8.3.3"
+pytest-asyncio = "^0.25.3"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
