feat: add final job with deployment to the prod space

--- a/.github/workflows/deploy-agent.yaml
+++ b/.github/workflows/deploy-agent.yaml
@@ -41,7 +41,7 @@ jobs:
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Install template with Poetry
-        run: poetry install --with dev,eval
+        run: poetry install --with dev
 
       - name: Test the tools
         run: poetry run pytest -r 'fEsxX' tests/
@@ -56,7 +56,7 @@ jobs:
       - name: Invoke agent template locally
         run: poetry run watsonx-ai template invoke "Hello, how can you help me?"
 
-  deploy:
+  validate:
     runs-on: ubuntu-latest
     needs: [test]
     defaults:
@@ -89,13 +89,13 @@ jobs:
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Install template with Poetry
-        run: poetry install --with dev,eval
+        run: poetry install --with eval
 
       - name: Set up deployment config
         env:
           WATSONX_API_KEY: ${{ secrets.WATSONX_API_KEY }}
           WATSONX_URL: ${{ secrets.WATSONX_URL }}
-          WATSONX_SPACE_ID: ${{ secrets.WATSONX_SPACE_ID }}
+          WATSONX_SPACE_ID: ${{ secrets.WATSONX_SPACE_ID_DEV }}
         run: poetry run python scripts/setup-config.py
 
       - name: Deploy agent to deployment space
@@ -109,3 +109,51 @@ jobs:
 
       - name: Remove deployment and associated asset
         run: yes | poetry run watsonx-ai service delete $(python -c "from utils import load_config; print(load_config('deployment')['deployment_id'])")
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [validate]
+    defaults:
+      run:
+        working-directory: ${{ env.AGENT_WORKDIR }}
+    env:
+      POETRY_VENV_DIR: .venv
+    steps:
+      - name: Checkout latest update
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Restore Poetry dependencies and venv cache to speed-up installation
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/pypoetry
+            .venv
+          key: poetry-${{ runner.os }}-${{ hashFiles('poetry.lock') }}
+          restore-keys: |
+            poetry-${{ runner.os }}-
+
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Install template with Poetry
+        run: poetry install
+
+      - name: Set up deployment config
+        env:
+          WATSONX_API_KEY: ${{ secrets.WATSONX_API_KEY }}
+          WATSONX_URL: ${{ secrets.WATSONX_URL }}
+          WATSONX_SPACE_ID: ${{ secrets.WATSONX_SPACE_ID_PROD }}
+        run: poetry run python scripts/setup-config.py
+
+      - name: Deploy agent to deployment space
+        run: poetry run watsonx-ai service new
+
+      - name: Invoke agent deployment
+        run: poetry run watsonx-ai service invoke "Hello, how can you help me?"
