--- a/agents/base/langgraph-react-agent/pyproject.toml
+++ b/agents/base/langgraph-react-agent/pyproject.toml
@@ -22,6 +22,7 @@ pytest = "^8.3.3"
 [tool.poetry.group.eval.dependencies]
 setuptools = "80.9.*"
 unitxt = "^1.24.0"
+datasets = "3.6.0"
 nltk = "^3.9.1"
 rouge-score = "^0.1.2"
 
